fix fxml bug, add main.java file

--- a/Dissertation/App/.vscode/launch.json
+++ b/Dissertation/App/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - main",
+            "request": "launch",
+            "mainClass": "src.View.main",
+            "projectName": "App_1e6c4c7"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - App",
+            "request": "launch",
+            "mainClass": "src.View.App",
+            "projectName": "App_1e6c4c7"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - Main",
             "request": "launch",
             "mainClass": "src.Main",
